remediation/network-ec2-vpc/fix-prowler_ec2_networkacl_allow_ingress_tcp_port_3389_arn_aws_ec2_eu_west_3_132410971304_network_acl_acl_0ebd5da14e1dbdbc7_ap_northeast_2.tf
resource "aws_network_acl_rule" "remediate_ec2_networkacl_allow_ingress_tcp_port_3389_65b17d607b" {
  network_acl_id = "acl-0ebd5da14e1dbdbc7"
  rule_number    = 100
  egress         = false
  protocol       = "tcp"
  rule_action    = "deny"
  cidr_block     = "0.0.0.0/0"
  from_port      = 3389
  to_port        = 3389
}
